public/frontend/styles/carousel.css
.gallery {
  width: 100%;
  height: 100vh;
}

.gallery-container {
  align-items: center;
  display: flex;
  height: 400px;
  margin: 0 auto;
  max-width: 1000px;
  position: relative
}

.gallery-item {
  /* height: 150px; */
  opacity: .4;
  position: absolute;
  transition: all .3s ease-in-out;
  width: 150px;
  z-index: 0
}

.gallery-item.gallery-item-selected {
  /* border: 1px solid #F8DF33; */
  /* border-radius: 30px; */
  opacity: 1;
  left: 50%;
  transform: translateX(-50%);
  width: 300px;
  /* height: 375px; */
  z-index: 2
}

.gallery-item.gallery-item-previous,
.gallery-item.gallery-item-next {
  /* height: 200px; */
  opacity: 1;
  width: 200px;
  z-index: 1
}

.gallery-item.gallery-item-previous {
  left: 30%;
  transform: translateX(-50%)
}

.gallery-item.gallery-item-next {
  left: 70%;
  transform: translateX(-50%)
}

.gallery-item.gallery-item-first {
  left: 15%;
  transform: translateX(-50%)
}

.gallery-item.gallery-item-last {
  left: 85%;
  transform: translateX(-50%)
}

.gallery-controls {
  width: 100%;
  display: flex;
  justify-content: space-between;
  position: absolute;
  top: 40%;
  left: 0;
  z-index: 10;
  padding: 0 2rem;
}

.gallery-controls button {
  border: 0;
  cursor: pointer;
  font-size: 3rem;
  background-color: rgb(255 255 255 / 40%);
  color: rgb(253 249 13 / 40%);
  width: 64px;
  height: 64px;
  border-radius: 50%;
}

.gallery-controls button:hover {
  background-color: rgb(255 255 255 / 60%);
  color: rgb(253 249 13 / 60%);
}

.gallery-controls button:focus {
  outline: none
}

.gallery-controls-previous {
  position: relative
}

.gallery-controls-previous::before {
  border: solid #000;
  border-width: 0 2px 2px 0;
  display: inline-block;
  height: 4px;
  left: -10px;
  padding: 2px;
  position: absolute;
  top: 0;
  transform: rotate(135deg) translateY(-50%);
  transition: left .15s ease-in-out;
  width: 4px
}

.gallery-controls-previous:hover::before {
  left: -18px
}

.gallery-controls-next {
  position: relative;
}

.gallery-controls-next::before {
  border: solid #000;
  border-width: 0 2px 2px 0;
  display: inline-block;
  height: 4px;
  padding: 2px;
  position: absolute;
  right: -10px;
  top: 50%;
  transform: rotate(-45deg) translateY(-50%);
  transition: right .15s ease-in-out;
  width: 4px;
}

.gallery-controls-next:hover::before {
  right: -18px
}

.gallery-nav {
  bottom: -110px;
  display: flex;
  justify-content: center;
  list-style: none;
  padding: 0;
  margin-top: 100px;
  position: absolute;
  width: 100%
}

.gallery-nav li {
  background: #ccc;
  border-radius: 50%;
  height: 10px;
  margin: 0 16px;
  width: 10px
}

.gallery-nav li.gallery-item-selected {
  background: #f8df33
}

